Adiciona novas rotas e incrementa doc swagger
