# bodega-be/src/controllers/product.js
@@ -26,16 +26,21 @@ module.exports = {
             #swagger.summary = 'Recupera produtos por categoria'
             #swagger.description = 'Recupera todos os os produtos de uma categoria'
             #swagger.parameters['id'] = {
-                in: 'path',
+                in: 'query',
                 description: 'Id da categoria',
                 required: true,
                 type: 'number',
                 format: 'int64',
             }
             #swagger.responses[200] = {
-                description: 'Busca realizada com sucesso !'
+                description: 'Busca realizada com sucesso!'
             }
-            #swagger.response[500]: 'Erro interno no servidor'
+            #swagger.responses[404] = {
+                description: 'Nenhum produto encontrado na categoria informada!'
+            }
+            #swagger.response[500]: {
+                description: 'Erro interno no servidor'
+            }
         */
         try{
             products = [] // select * from products where category = req.params.id;
@@ -54,7 +59,7 @@ module.exports = {
             #swagger.summary = 'Recupera produtos com valores superiores ao informado'
             #swagger.description = 'Recupera produtos com valores superiores ao informado no corpo da requisição'
             #swagger.parameters['value'] = {
-                in: 'path',
+                in: 'query',
                 description: 'Valor',
                 required: true,
                 type: 'number',
@@ -62,6 +67,9 @@ module.exports = {
             }
             #swagger.responses[200] = {
                 description: 'Busca realizada com sucesso !'
+            }
+            #swagger.responses[404] = {
+                description: 'Nenhum produto encontrado na faixa de preço indicada!'
             }
             #swagger.responses[500] = {
                 description: 'Erro interno no servidor'
@@ -83,7 +91,7 @@ module.exports = {
             #swagger.summary = 'Recupera produtos com valores inferiores ao informado'
             #swagger.description = 'Recupera produtos com valores inferiores ao informado no corpo da requisição'
             #swagger.parameters['value'] = {
-                in: 'path',
+                in: 'query',
                 description: 'Valor',
                 required: true,
                 type: 'number',
@@ -91,6 +99,9 @@ module.exports = {
             }
             #swagger.responses[200] = {
                 description: 'Busca realizada com sucesso !'
+            }
+            #swagger.responses[404] = {
+                description: 'Nenhum produto encontrado na faixa de preço indicada!'
             }
             #swagger.responses[500] = {
                 description: 'Erro interno no servidor'
@@ -112,7 +123,7 @@ module.exports = {
             #swagger.summary = 'Recupera produtos filtrando por nome'
             #swagger.description = 'Recupera produtos que possuem nomes parecidos com o nome informado'
             #swagger.parameters['name'] = {
-                in: 'path',
+                in: 'query',
                 description: 'Nome que será pesquisado',
                 required: true,
                 type: 'string',
@@ -122,11 +133,9 @@ module.exports = {
             #swagger.responses[200] = {
                 description: 'Busca realizada com sucesso !'
             }
-
             #swagger.responses[404] = {
-                description: 'Nenhum produto encontrado'
+                description: 'Nenhum produto encontrado com nome parecido ao informado!'
             }
-
             #swagger.responses[500] = {
                 description: 'Erro interno no servidor'
             }
@@ -155,7 +164,7 @@ module.exports = {
             #swagger.tags = ['Produto']
             #swagger.summary = 'Cria produto'
             #swagger.description = 'Insere produtos no bancos de dados'
-            #swagger.parameters['body'] = {
+            #swagger.parameters[''] = {
                 in: 'body',
                 description: 'Json com campos do produto',
                 required: true,
@@ -172,9 +181,11 @@ module.exports = {
             }
     
             #swagger.responses[200] = {
-                description: 'Produto criado com sucesso !'
+                description: 'Produto criado com sucesso!'
             }
-
+            #swagger.responses[400] = {
+                description: 'Algum dado obrigatório não foi preenchido!'
+            }
             #swagger.responses[500] = {
                 description: 'Erro interno no servidor'
             }
@@ -192,7 +203,6 @@ module.exports = {
             // insert into products values (...product);
             product = req.body
             res.send(status.OK, {
-                message : "Created with sucess!",
                 body: JSON.stringify(product)
             })
         }catch (error){
@@ -200,93 +210,76 @@ module.exports = {
         }   
     },
 
-    async delete(req, body){
+    async delete(req, res){
         /* 	#swagger.tags = ['Produto']
             #swagger.summary = 'Deleta produto'
             #swagger.description = 'Deleta produto do banco de dados'
             #swagger.parameters['id'] = {
-                in: 'path',
+                in: 'query',
                 description: 'Id do produto',
                 required: true,
                 type: 'number',
                 format: 'int64'
             }
+            #swagger.responses[200] = {
+                description: 'Produto deletado com sucesso!'
+            }
+            #swagger.responses[404] = {
+                description: 'Nenhum produto encontrado com o codigo informado!'
+            }
+            #swagger.responses[500] = {
+                description: 'Erro interno no servidor'
+            }
         */
         try {
             // delete from products where id = req.params.id;
             res.send(status.OK, {
-                message : "Item deleted from database !"
             })
         }catch (error){
                 res.send(status.INTERNAL_SERVER_ERROR, error["message"])
         }  
     },
 
-    async updatePrice(req, body){
+    async updatePrice(req, res){
         /*	#swagger.tags = ['Produto']
             #swagger.summary = 'Atualiza preço do produto'
             #swagger.description = 'Atualiza preço de um produto no banco de dados'
             #swagger.parameters['id'] = {
-                in: 'path',
+                in: 'query',
                 description: 'Id do produto',
                 required: true,
                 type: 'number',
                 format: 'int64'
             }
-            #swagger.parameters['body'] = {
+            #swagger.parameters[''] = {
                 in: 'body',
                 description: 'Json com novo valor',
                 required: true,
                 type: 'number',
-                format: 'int64'
+                format: 'int64',
                 schema : {
                     value : 1.99
                 }
+            }
+
+            #swagger.responses[200] = {
+                description: 'Produto atualizado com sucesso !'
+            }
+            #swagger.responses[404] = {
+                description: 'Produto não encontrado !'
+            }
+            #swagger.responses[500] = {
+                description: 'Erro interno no servidor'
             }
         */  
         try {
             // needs a ORM to update only the changed fields;
             res.send(status.OK, {
-                message : "Item updated with sucess !",
-                body :bu 
             })
         }catch (error){
                 res.send(status.INTERNAL_SERVER_ERROR, error["message"])
         }         
-    },
-
-    async reserve(req, body){
-        /*	#swagger.tags = ['Produto']
-            #swagger.summary = 'Reserva produto'
-            #swagger.description = 'Reserva um produto no banco de dados'
-            #swagger.parameters['id'] = {
-                in: 'path',
-                description: 'Id do produto',
-                required: true,
-                type: 'number',
-                format: 'int64'
-            }
-            #swagger.parameters['quantity'] = {
-                in: 'body',
-                description: 'Quantidade a ser reservada',
-                required: true,
-                type: 'number',
-                format: 'int64',
-                schema : {
-                    quantity: 3
-                }
-            }
-        */
-        try {
-            res.send(status.OK, {
-                message : "Item reserved with sucess !"
-            })
-        }catch (error){
-                res.send(status.INTERNAL_SERVER_ERROR, error["message"])
-        }         
-    },
-
-
+    }
 
 }
 
