# bodega-be/src/controllers/user.js
@@ -2,19 +2,42 @@ const status  = require("http-status-codes").StatusCodes
 
 module.exports = {
     async create(req, res){
-        // 	#swagger.tags = ['Usuário']
+        /* 	#swagger.tags = ['Usuário']
+            #swagger.summary = 'Registro do usuário'
+            #swagger.description = 'JSON com informações de registro'
+            #swagger.parameters[''] = {
+                in: 'body',
+                description: 'Quantidade a ser reservada',
+                required: true,
+                schema : {
+                    name: "name",
+                    email: "email@email.com",
+                    password: "password"
+                }
+            }
+
+            #swagger.responses[200] = {
+                description: 'Usuário cadastrado com sucesso !'
+            }
+            #swagger.responses[400] = {
+                description: 'Algum dado obrigatório não foi preenchido!'
+            }
+            #swagger.responses[500] = {
+                description: 'Erro interno no servidor'
+            }
+        */
         try{
             const { email, name, password } = req.body 
+            // @todo: Add handler to email allready in use             
             if (!(email || name || password)){
                 res.send(status.BAD_REQUEST, {
-                    "message" : "you need to fill all fields !"
                 })
             }else{
                 // insert into user values (nextval(id), name, email, password) ;
                 res.send(status.OK,{ 
-                    "message" : "User created !"     
                 })
             }
+            
         }
         catch (error){
             res.send(status.INTERNAL_SERVER_ERROR, error["message"])
@@ -22,18 +45,39 @@ module.exports = {
     },
 
     async login(req, res){
-        // 	#swagger.tags = ['Usuário']
+        /*
+         	#swagger.tags = ['Usuário']
+            #swagger.summary = 'Login do usuário'
+            #swagger.description = 'Loga usuário no sistema'
+            #swagger.parameters[''] = {
+                in: 'body',
+                description: 'JSON com informações de login',
+                required: true,
+                schema : {
+                    email: "email@email.com",
+                    password: "password"
+                }
+            }
+
+            #swagger.responses[200] = {
+                description: 'Usuário logado no sistema!'
+            }
+            #swagger.responses[401] = {
+                description: 'Credenciais inválidas!'
+            }
+            #swagger.responses[500] = {
+                description: 'Erro interno no servidor!'
+            }
+        */
         try{
             const { email, password } = req.body 
             // select * from users where login = req.body.login and password=req.body.password;
             if(user){
                 res.send(status.OK,{ 
-                    "message" : "The user is logged in !"
                 })
             }
             else{
                 res.send(status.UNAUTHORIZED,{ 
-                    "message" : "Invalid credentials !"
                 })
             }
         }
